fix: overflow title and background banner
the overflow of app and the background was corrected, it also
added a button to close the modal and the title was limited to 20
characters.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-      /* max-width: 1280px; */
+    /* max-width: 1280px; */
     /* margin: 0 auto; */
-    /* padding: 2rem; */
+    padding-bottom: 20px;
     text-align: center;
     width: 100%;
     position: relative;
